--- a/troy-nc-news/package.json
+++ b/troy-nc-news/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-moment": "^0.9.6",
     "react-scripts": "3.2.0"
   },
   "scripts": {
