--- a/troy-nc-news/package.json
+++ b/troy-nc-news/package.json
@@ -9,7 +9,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-moment": "^0.9.6",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-slideshow-image": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
